--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2716,7 +2716,7 @@ input, select, textarea {
 		}
 
 			#header h1 a, #header h2 a, #header h3 a, #header h4 a, #header h5 a, #header h6 a {
-				color: #ffffff;
+				color: #5e3bee;
 			}
 
 		#header header p {
@@ -2751,7 +2751,7 @@ input, select, textarea {
 			}
 
 			#header > header p {
-				color: #6c4cee;
+				color: #eceaf6;
 				font-style: italic;
 				margin: 1em 0 0 0;
 			}
