--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1785,7 +1785,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #5e3bee;
+		color: #224ed1;
 		font-size: 3.5em;
 	}
 
@@ -1848,7 +1848,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #5e3bee;
+			border-color: #483b7d;
 		}
 
 	select {
@@ -2402,9 +2402,9 @@ input, select, textarea {
 			}
 
 			ul.feature-icons li:before {
-				background: #5e3bee;
+				background: #fcdfd7;
 				border-radius: 100%;
-				color: #ffffff;
+				color: #f36648;
 				display: block;
 				height: 2.5em;
 				left: 0;
@@ -2618,7 +2618,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #5e3bee;
+			background-color: #224ed1;
 			color: #ffffff !important;
 		}
 
@@ -2626,7 +2626,7 @@ input, select, textarea {
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #6c4cee;
+				background-color: #84a5f2;
 			}
 
 			input[type="submit"].primary:active,
@@ -2701,7 +2701,7 @@ input, select, textarea {
 		-ms-justify-content: space-between;
 		justify-content: space-between;
 		background: #0f1320;
-		color: #d2f2e9;
+		color: #eceaf6;
 		height: 100%;
 		overflow-y: auto;
 		position: fixed;
@@ -2716,7 +2716,7 @@ input, select, textarea {
 		}
 
 			#header h1 a, #header h2 a, #header h3 a, #header h4 a, #header h5 a, #header h6 a {
-				color: #5e3bee;
+				color: #84a5f2;
 			}
 
 		#header header p {
@@ -2724,7 +2724,7 @@ input, select, textarea {
 		}
 
 		#header a {
-			color: #d2f2e9;
+			color: #eceaf6;
 		}
 
 			#header a:hover {
@@ -2772,7 +2772,7 @@ input, select, textarea {
 			}
 
 				#header > footer .icons li a {
-					color: #6c4cee;
+					color: #84a5f2;
 				}
 
 		#header > nav {
@@ -2808,7 +2808,7 @@ input, select, textarea {
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #5e3bee !important;
+							color: #84a5f2 !important;
 						}
 
 					#header > nav ul li:first-child {
